Movec sections id task p1->p3

--- a/p1/p1.tex
+++ b/p1/p1.tex
@@ -1,60 +1,63 @@
-\chapter{Обзор состояния проблемы и постановка задачи исследования}
+\chapter{Огляд стану проблеми і постановка завдання дослідження}
 
-Современный уровень науки и технологий характеризуется
-широким использованием нелинейных динамических
-систем~\cite{andronov_vitt_haikin,anisch_nonlin_eff,mishenko_du_small_relax,nonlin_vibro,malinetskii_modern_methods_nl_dyn}.
-При этом нелинейные эффекта присущи как объектам,
-так и системам управления~\cite{kubik_nlsc,vukobr_nonadopt}. Динамика нелинейных систем,
-характеризуется общим уровнем сложности моделей,
-в большинстве случаев не допускающего
-точного аналитического представления.
-Помимо этого, был обнаружен, и в последнее время представляет
-постоянный интерес для исследователей класс систем,
-проявляющих хаотическую динамику~\cite{moon_chaotic_vibr,magni_theory_dyn_chaos,kuznetsov_dyn_chaos,neimark_stoch_chaos_vibro,anisch_reg_and_chaotic_vibro}.
-Для таких систем, вследствие чувствительности к начальным условиям
-и параметрам, характерным свойством является наличие ограниченного горизонта прогноза как
-в прошлое, так и в будущее, рост энтропии
-и необратимость процессов~\cite{chernavskii_syn_info,prigogine_from_existent,koltsova_nl_dyn_chem}.
-Это свойство делает неприменимыми
-большинство методов, разработанных для описания, управления и
-идентификации динамических систем. Также было замечено,
-что некоторые известные динамические системы, в том числе широко
-используемые в научной, производственной и технологической практике,
-зарекомендовавшие себя как системы регулярной динамики,
-при определённых условиях демонстрируют хаотическое поведение.
-Хаотически свойства проявляют системы как классической,
-так и квантовой механики.
-Новые свойства подобных систем требуют создания новых
-методов для решения задач моделирования,
-управления и идентификации~\cite{karabutov_adapt_id_sys,dmitriev_trans_chaos_lowpower}.
+Сучасний рівень науки и технологий характерізується широким
+Використання нелінійніх дінамічніх систем~\cite{andronov_vitt_haikin,
+anisch_nonlin_eff, mishenko_du_small_relax, nonlin_vibro, malinetskii_modern_methods_nl_dyn}. При цьому
+нелінійні ефекту притаманні як об'єктам, так і системам
+управління~\cite{kubik_nlsc, vukobr_nonadopt}. Динаміка нелінійних систем,
+характеризується загальним рівнем складності моделей,
+в більшості випадків не допускає точного аналітичного
+уявлення. Крім цього, було виявлено, і останнім часом представляє
+постійний інтерес для дослідників клас систем, які проявляють
+хаотичну динаміку~\cite{moon_chaotic_vibr, magni_theory_dyn_chaos, kuznetsov_dyn_chaos,
+neimark_stoch_chaos_vibro, anisch_reg_and_chaotic_vibro}. Для таких систем, внаслідок
+чутливості до початкових умов і параметрів, характерним
+властивістю є наявність обмеженого горизонту прогнозу як в
+минуле, так і в майбутнє, зростання ентропії і незворотність
+процесів~\cite{chernavskii_syn_info, prigogine_from_existent, koltsova_nl_dyn_chem}. Ця
+властивість робить непридатними більшість методів, розроблених
+для опису, управління та ідентифікації динамічних систем. Також
+було відмічено, що деякі відомі динамічні системи, в тому числі
+широко використовуються в науковій, виробничій та технологічній
+практиці, зарекомендували себе як системи регулярної динаміки,
+при певних умовах демонструють хаотична поведінка. Хаотично
+властивості проявляють системи як класичної, так і квантової
+механіки. Нові властивості подібних систем вимагають створення
+нових методів для вирішення задач моделювання, управління та
+ідентифікації~\cite{karabutov_adapt_id_sys, dmitriev_trans_chaos_lowpower}.
 
 
-\section{Основные понятия задачи идентификации динамических систем} % {{{1
+\section{Основні поняття завдання ідентифікації динамічних систем} % {{{1
 
-Одно из первых определений задачи идентификации было дано
-Л.~Заде~\cite{zadeh_id_1956}.
-Согласно этому определению,
-``Идентификация состоит в отыскании по входным и выходным сигналам
-некоторой системы эквивалентной ей системы
-из некоторого заданного класса''~\cite{eykhoff_id_base,eykhoff_modern_id,lung_id_sys}.
+Одне з перших визначень завдання ідентифікації було дано
+Л.~Заде~\cite{zadeh_id_1956}. Згідно з цим визначенням,
+``Ідентифікація
+полягає у знаходженні по вхідних і вихідних сигналам деякої
+системи еквівалентної їй системи з деякого заданого
+класу''~\cite{eykhoff_id_base, eykhoff_modern_id, lung_id_sys}.
 
 
-Н.С.~Райбман в предисловии к известной работе П.~Эйкхоффа~\cite{eykhoff_id_base}
-дал следующее определении идентификации
-``по результатам наблюдений над входными и выходными переменными системы должна быть
-построена оптимальная в некотором смысле модель, то есть формализированное представление этой системы''.
-Данное определение отличается предельной широтой охвата за счёт того,
-что под определение ``оптимальная в некотором смысле'' попадает
-практически любое, в том числе не относящееся к собственно идентификации условие.
-В одной из последующих работ~\cite{raibman_id_obj_ctl}
-вид этого определения стал более строгим и формальным:
-``В качестве критерия оптимальности используется функция выходных переменных объекта $y(t)$ и модели
-$y^{*}(t) = A_t^{*} x(s) $, и на ёё математическое ожидание накладывается условие
-$M \{\rho [ y_t, y_t^{*} ] \} \to {\min}$''.
-Это определение действительно соответствует задаче идентификации ценой
-введения существенных ограничений: возможности представления динамики системы в виде оператора,
-существования и возможности определения математического ожидания,
-и соответствия минимума этого ожидания близости динамики системы и её модели.
+Н.С.~Райбман в передмові до відомої роботі
+П.~Ейкхоффа~\cite{eykhoff_id_base} дав наступне визначення ідентифікації
+``за результатами спостережень над вхідними та вихідними
+змінними системи повинна бути побудована оптимальна в
+деякому сенсі модель, тобто формалізоване представлення цієї
+системи ''. Дане визначення відрізняється граничною широтою
+охоплення за рахунок того, що під визначення ``оптимальна в
+деякому сенсі '' потрапляє практично будь-який, в тому числі не
+відноситься до власне ідентифікації умова. В одній з наступних
+робіт~\cite{raibman_id_obj_ctl} вид цього визначення став більш суворим і
+формальним:``В якості критерію оптимальності використовується
+функція вихідних змінних об'єкта
+$ y (t) $ і моделі
+$ y ^{*} (t) = A_t ^{*} x (s) $, і на ЇЇ математичне очікування накладається
+умова
+$ M \{\rho [y_t, y_t ^{*}] \} \to{\min} $''. Це визначення чинне лише
+відповідає завданню ідентифікації ціною введення істотних
+обмежень:можливості подання динаміки системи у вигляді
+оператора, існування і можливості визначення математичного
+очікування, і відповідності мінімуму цього очікування
+близькості динаміки системи і її моделі.
 
 
 
@@ -64,48 +67,48 @@ $M \{\rho [ y_t, y_t^{*} ] \} \to {\min}$''.
 
 %Критерии
 
-% TODO: may be p1?
-При описании и анализе динамики хаотических
-систем используются специализированные характеристики и показатели.
-Например, сечение Пуанкаре~\cite{moon_chaotic_vibr,anisch_complex_vibrations_in_simple_systems,atu_st105}
-позволяет визуально определить признаки хаотической динамики.
-Однако, использование визуальных признаков в качестве критерия
-весьма затруднено.
+При описі і аналізі динаміки хаотичних систем
+використовуються спеціалізовані характеристики і
+показники. Наприклад, перетин Пуанкаре~\cite{moon_chaotic_vibr,
+anisch_complex_vibrations_in_simple_systems, atu_st105} дозволяє візуально визначити
+ознаки хаотичної динаміки. Однак, використання візуальних
+ознак в якості критерію вельми складно.
 
-Другим важным признаком является фрактальная размерность. %TODO: cite
-В отличие от сечения Пуанкаре, она имеет скалярный вид,
-что делает возможным её использование в качестве критерия.
-Однако, диапазон изменения этой величины для большинства сигналов достаточно мал,
-и в условиях шумов измерения выделить полезную
-для идентификации составляющую весьма затруднительно.
+Іншою важливою ознакою є фрактальна розмірність. На відміну від
+перетину Пуанкаре, вона має скалярний вид, що робить можливим
+її використання в якості критерію. Однак, діапазон зміни цієї
+величини для більшості сигналів досить малий, і в умовах шумів
+вимірювання виділити корисну для ідентифікації складову
+вельми скрутно.
 
 % }}}1
 
-\section{Существующие методы идентификации нелинейных динамических систем}  % {{{1
+\section{Існуючі методи ідентифікації нелінійних динамічних систем}%{{{1
 
-Ввиду того, что задача идентификации сложных динамических систем всегда была актуальной,
-и привлекала внимание многих исследователей, было создано
-значительное количество методов и систем идентификации~\cite{eykhoff_id_base,leondes_modern_tu,nelles_nlsys_id}.
-Создание универсальной системы идентификации, безусловно подходящей для
-любой динамической системы, представляется практически нерешаемой задачей.
-Следовательно, каждый из существующих методов имеет свою область применения~\cite{rastr_intro}.
-Наиболее математически обоснованным являются методы идентификации
-линейных систем.
+З огляду на те, що завдання ідентифікації складних динамічних
+систем завжди була актуальною, і привертала увагу багатьох
+дослідників, було створено значну кількість методів і систем
+ідентифікації~\cite{eykhoff_id_base, leondes_modern_tu, nelles_nlsys_id}. Створення
+універсальної системи ідентифікації, безумовно підходящої
+для будь-якої динамічної системи, представляється практично
+нездійсненним завданням. Отже, кожен з існуючих методів має
+свою область застосування~\cite{rastr_intro}. Найбільш математично
+обґрунтованим є методи ідентифікації лінійних систем.
 
-Для очень узкого класса нелинейных систем является возможным
-получение аналитического выражения для значения параметра
-по измерениям входных и выходных сигналов. Чаще всего,
-для сложных динамических систем получить такую аналитическую
-зависимость невозможно. Поэтому широкое распространение получили методы
-с использованием параллельной модели~\cite{lung_id_sys,gropp_methods_id,deith_method_id_ds},
-в которых на вход и модели, и объекта подаётся один и тот же входной сигнал,
-и параметры модели настраиваются таким образом, чтобы выход модели
-был наиболее близким к выходу объекта. В какой-то мере
-именно такие методы отображают определение идентификации.
-Между собой эти методы отличаются способами настройки параметров модели.
+Для дуже вузького класу нелінійних систем є можливим отримання
+аналітичного виразу для значення параметра за вимірюваннями
+вхідних і вихідних сигналів. Найчастіше, для складних динамічних
+систем отримати таку аналітичну залежність неможливо. Тому
+широкого поширення набули методи з використанням паралельної
+моделі~\cite{lung_id_sys, gropp_methods_id, deith_method_id_ds}, в яких на вхід і моделі,
+і об'єкта подається один і той же вхідний сигнал, і параметри
+моделі налаштовуються таким чином, щоб вихід моделі був
+найбільш близьким до виходу об'єкта. В якійсь мірі саме такі
+методи відображають визначення ідентифікації. Між собою ці
+методи відрізняються способами настройки параметрів моделі.
 
 
-\subsection{Синхронный детектор} % {{{2
+\subsection{Синхронний детектор}%{{{2
 
 Принцип работы синхронного детектора %  \cite{adopt_cont_sys}
 (рис.~\ref{atu:f:syncdet})
@@ -122,7 +125,7 @@ $M \{\rho [ y_t, y_t^{*} ] \} \to {\min}$''.
 \begin{center}
 \input{p/syncdet.pgf}
 \end{center}
-\caption{Система идентификации с синхронным детектором}
+\caption{Система ідентифікації з синхронним детектором}
 \label{atu:f:syncdet}
 \end{figure}
 
@@ -135,7 +138,7 @@ $M \{\rho [ y_t, y_t^{*} ] \} \to {\min}$''.
 
 % }}}2
 
-\subsection{Метод идентификации с переменной частотой пробного воздействия} % {{{2
+\subsection{Метод ідентифікації зі змінною частотою пробного впливу}%{{{2
 
 Принцип работы данного метода
 (рис.~\ref{atu:f:varfreq})
@@ -149,7 +152,7 @@ $M \{\rho [ y_t, y_t^{*} ] \} \to {\min}$''.
 \begin{center}
 \input{p/varfreq.pgf}
 \end{center}
-\caption{Система идентификации с переменной частотой пробного воздействия}
+\caption{Система ідентифікації зі змінною частотою пробного впливу}
 \label{atu:f:varfreq}
 \end{figure}
 
@@ -169,7 +172,7 @@ $M \{\rho [ y_t, y_t^{*} ] \} \to {\min}$''.
 
 % }}}2
 
-\subsection{Метод случайного поиска} % {{{2
+\subsection{Метод випадкового пошуку}%{{{2
 
 Основа данного метода заключается в том, что
 очередном шаге сравнивается текущее и предыдущее
@@ -216,7 +219,7 @@ $M \{\rho [ y_t, y_t^{*} ] \} \to {\min}$''.
 
 % }}}2
 
-\subsection{Адаптивно-поисковая идентификация с возмущением параметра одной модели} % {{{2
+\subsection{Адаптивно-пошукова ідентифікація з обуренням параметра однієї моделі}%{{{2
 
 Метод адаптивно-поисковой идентификации с возмущением параметров одной модели
 изначально был разработан как метод поисковой оптимизации
@@ -231,7 +234,7 @@ $M \{\rho [ y_t, y_t^{*} ] \} \to {\min}$''.
 \begin{center}
 \input{p/apid1.pgf}
 \end{center}
-\caption{Адаптивно-поисковая идентификация с возмущением параметра одной модели}
+\caption{Адаптивно-пошукова ідентифікація зі збуренням параметра однієї моделі}
 \label{atu:f:apid1}
 \end{figure}
 
@@ -399,108 +402,6 @@ $T_d$ --- параметрическое запаздывание.
 
 % }}}1
 
-\section{Постановка задачи идентификации}  % {{{1
-
-Пусть задан динамический объект $ \mathbf{O}$, характеризуемый параметром $p_o(t)$.
-Информация об этом параметре может быть представлена
-различными способами. Например, может быть задан только диапазон
-$[p_{\min}, p_{\max}]$,
-возможных значений параметра,
-этот же диапазон может иметь зависимость от времени:
-$[p_{\min}(t), p_{\max}(t)]$.
-Множество допустимых значений параметра обозначим через $\mathcal{P}$.
-На основании априорных исследований может
-быть задана как плотность вероятности для значений параметра,
-так и зависимость этой вероятности от времени. Наличие плотности вероятности
-позволяет использовать информационные оценки идентификации~\cite{info_cipkin,atu_asau10},
-но не является необходимым условием для синтеза системы идентификации в целом.
-Более того, для получения достаточно точных информационных оценок
-требуется затратить значительно больше ресурсов на проведение моделирования,
-чем на собственно идентификацию.
-Также могут быть заданы дополнительные ограничения, такие как максимальна скорость
-изменения параметра и т.д.
-
-Пусть также существует конечное множество моделей
-\label{atu:d:N}$\mathbf{M}_i$, $i=0 \ldots N-1$.
-Структура моделей предполагается известной и одинаковой,
-а параметру объекта $p_o(t)$ соответствуют параметры моделей $p_{i}(t)$.
-
-На вход как моделей, так и объекта подаётся входной сигнал \label{atu:d:u}$u(t)$.
-Частный случай, когда ни объект, ни модели не требуют входного сигнала
-не нарушает общности постановки. В некоторых случаях
-не следует пренебрегать ошибкой измерения входного сигнала $w_u(t)$,
-однако, при анализе динамики систем идентификации в целом,
-этой величиной, как правило, пренебрегают.
-
-В общем случае $u(t)$, $x(t)$, $p(t)$ -- векторные величины.
-В тех случаях, когда размерность $x(t)$ не выше трёх,
-компоненты этого вектора будем обозначать соответственно $x(t)$, $y(t)$, $z(t)$.
-
-Выходные сигналы моделей
-\label{atu:d:x}$x_i(t)$ считаем известными точно, так как ошибки
-представления значений при численных вычислениях заведомо
-пренебрежимо малы с точностью измерений. Напротив,
-выход объекта $x_{op}(t)$ считаем измеренным
-с определённой ошибкой измерения \label{atu:d:w}$w(t)$:
-%
-\[
-  x_o(t) = x_{op}(t) + w(t).
-\]
-%
-Сигнал $w(t)$ обычно задаётся как случайный сигнал с
-известным видом распределения, а также параметрами этого распределения,
-например, нормальное распределения с среднеквадратичным отклонением $\sigma_w$
-и характерным временем автокорреляции $\tau_w$.
-При моделировании процессов измерения внешних сигналов в помощью АЦП может потребоваться
-более сложное представление:
-%
-\[
-  x_o(t) = W( x_{op}(t) + w(t) ).
-\]
-%
-Данный способ определения $x_o(t)$ необходим в тех случаях,
-когда надо отобразить при моделировании тот факт,
-что данный сигнал принимает фиксированный набор значений, определяемый разрядностью АЦП.
-
-Временные ограничения на работу системы идентификации могут быть заданы
-следующими способами. В простейшем случае, значение $p_o$
-считается постоянным, но ограничено полное время измерения $T$.
-В противном случае задаются ограничения на динамику $p_o(t)$.
-Распространённые способы:
-
-a) ограничение производной:
-%
-\begin{equation}
-  \left| \od{p_o(t)}{t} \right| < d_{p,\max}.
-  \label{atu:eq:p_lim_diff}
-\end{equation}
-Самый простой метод, но имеет ограниченное применение в реальных
-задачах, так как резкие изменение значений параметра,
-связанные с переключениями состояния или режимов работы системы,
-выходом из строя элементов системы на дают возможности корректно ограничить
-величину  $d_{p,\max}$. С другой стороны, такие изменения
-происходят достаточно редко, и этот факт не отражает ограничение (\ref{atu:eq:p_lim_diff}).
-
-b) ограничение длины кривой $p_o(t)$ на любом из интервалов времени $[t,t+\Delta t]$:
-\begin{equation}
-  \int\limits_{t}^{t+\Delta t} \sqrt{1 + \left( \od{p_o(t)}{t} \right)^2 } \, \mathrm{d}t < l_{p,\max}.
-  \label{atu:eq:p_lim_l}
-\end{equation}
-%
-Это ограничение выглядит несколько искусственным,
-но оно, с одной стороны, вводит ограничение на возможные изменения $p_o(t)$,
-и с другой стороны, не ограничивает резкие изменения параметра в отдельных областях.
-
-c) упрощённая форма варианта b) -- ограничение длины проекции  $p_o(t)$ на ось $p$:
-\begin{equation}
-  \int\limits_{t}^{t+\Delta t} \left| \od{p_o(t)}{t} \right | \, \mathrm{d}t < l_{pl,\max}.
-  \label{atu:eq:p_lim_pl}
-\end{equation}
-
-Целью задачи идентификации будем считать нахождение
-такого сигнала $p_\mathrm{id}(t)$, для которого
-отличие $q_\mathrm{id}(t)$ от $q_o(t)$ минимально.
-Понятие ``отличие'', как и вид критерия $q$, определяется исходной задачей.
 
 
 
