--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -1,5 +1,130 @@
 \chapter{Пошукові методи ідентифікації}
 
+\section{Постановка завдання ідентифікації} %{{{1 _id_task_
+
+Нехай заданий динамічний об'єкт
+$ \mathbf{O} $, що характеризується параметром
+$ p_o (t) $. Інформація про цей параметр може бути представлена
+різними способами. Наприклад, може бути заданий тільки
+діапазон
+$ [p_{\min}, p_{\max}] $, можливих значень параметра, цей же діапазон може
+мати залежність від часу:$ [p_{\min} (t), p_{\max} (t)] $. Безліч допустимих
+значень параметра позначимо через
+$ \mathcal{P} $. На підставі апріорних досліджень може бути задана
+як щільність ймовірності для значень параметра, так і
+залежність цієї ймовірності від часу. Наявність щільності
+ймовірності дозволяє використовувати інформаційні оцінки
+ідентифікації~\cite{info_cipkin, atu_asau10}, але не є необхідною умовою
+для синтезу системи ідентифікації в цілому. Більш того,
+для отримання досить точних інформаційних оцінок потрібно
+затратити значно більше ресурсів на проведення моделювання,
+ніж на власне ідентифікацію. Також можуть бути задані додаткові
+обмеження, такі як максимальна швидкість зміни параметра і т.д.
+
+Нехай також існує кінцев множина моделей \label{atu:d:N}
+$ \mathbf{M}_i $,
+$ i = 0 \ldots N-1 $. Структура моделей передбачається відомої і
+однаковою, а параметрам об'єкта
+$ p_o (t) $ відповідають параметри моделей
+$ p_{i} (t) $.
+
+На вхід як моделей, так і об'єкта подається вхідний сигнал
+\label{atu:d:u}
+$ u (t) $. Окремий випадок, коли ні об'єкт, ні моделі не вимагають
+вхідного сигналу чи не порушує загальності постановки. У деяких
+випадках не слід нехтувати похибкою вимірювання вхідного
+сигналу
+$ w_u (t) $, проте, при аналізі динаміки систем ідентифікації в
+цілому, цією величиною, як правило, нехтують.
+
+У загальному випадку
+$u(t)$,
+$x(t)$,
+$p(t)$ --- векторні величини. У тих випадках, коли розмірність
+$x(t)$ не вище трьох, компоненти цього вектора будемо позначати
+відповідно
+$x(t) $,
+$y(t) $,
+$z(t) $.
+
+Вихідні сигнали моделей \label{atu:d:x}
+$ x_i (t) $ вважаємо відомими точно, так як похибки представлення
+значень при чисельних обчисленнях свідомо нехтує малі з
+точністю вимірювань. Навпаки, вихід об'єкта
+$ x_{op} (t) $ вважаємо виміряним з певною похибкою вимірювання
+\label{atu:d:w}
+$ w (t) $:
+%
+\[
+  x_o(t) = x_{op}(t) + w(t).
+\]
+
+Сигнал
+$ w (t) $ зазвичай задається як випадковий сигнал з відомим видом
+розподілу, а також параметрами цього розподілу, наприклад,
+нормальне розподілу з середньоквадратичним відхиленням
+$ \sigma_w $ і характерним часом автокорреляции
+$ \tau_w $. При моделюванні процесів вимірювання зовнішніх сигналів
+в допомогою АЦП може знадобитися більш складне уявлення:
+%
+\[
+  x_o(t) = W( x_{op}(t) + w(t) ).
+\]
+%
+Даний спосіб визначення
+$ x_o (t) $ необхідний в тих випадках, коли треба відобразити при
+моделюванні той факт, що даний сигнал приймає фіксований набір
+значень, який визначається розрядністю АЦП.
+
+Часові обмеження на роботу системи ідентифікації можуть бути
+задані наступними способами. У найпростішому випадку, значення
+$ p_o $ вважається постійним, але обмежена повне час вимірювання
+$ T $. В іншому випадку задаються обмеження на динаміку
+$ p_o (t) $. Поширені способи:
+
+a) обмеження похідної:
+%
+\begin{equation}
+  \left| \od{p_o(t)}{t} \right| < d_{p,\max}.
+  \label{atu:eq:p_lim_diff}
+\end{equation}
+Самый простой метод, но имеет ограниченное применение в реальных
+задачах, так как резкие изменение значений параметра,
+связанные с переключениями состояния или режимов работы системы,
+выходом из строя элементов системы на дают возможности корректно ограничить
+величину  $d_{p,\max}$. С другой стороны, такие изменения
+происходят достаточно редко, и этот факт не отражает ограничение (\ref{atu:eq:p_lim_diff}).
+
+b) обмеження довжини кривої
+$ p_o (t) $ на будь-якому з інтервалів часу
+$ [t, t + \Delta t] $:
+\begin{equation}
+  \int\limits_{t}^{t+\Delta t} \sqrt{1 + \left( \od{p_o(t)}{t} \right)^2 } \, \mathrm{d}t < l_{p,\max}.
+  \label{atu:eq:p_lim_l}
+\end{equation}
+%
+Це обмеження виглядає дещо штучним, але воно, з одного боку,
+вводить обмеження на можливі зміни
+$ p_o (t) $, і з іншого боку, не обмежує різкі зміни параметра в
+окремих областях.
+
+c) спрощена форма варіанту b) --- обмеження довжини проекції
+$ p_o (t) $ на вісь
+$ p $:
+\begin{equation}
+  \int\limits_{t}^{t+\Delta t} \left| \od{p_o(t)}{t} \right | \, \mathrm{d}t < l_{pl,\max}.
+  \label{atu:eq:p_lim_pl}
+\end{equation}
+
+Метою завдання ідентифікації вважатимемо знаходження такого
+сигналу
+$ p_\mathrm{id} (t) $, для якого відміну
+$ q_\mathrm{id} (t) $ від
+$ q_o (t) $ мінімально. Поняття ``відміну'', як і вид критерію
+$ q $, визначається вихідної завданням.
+
+% }}}1 _id_task_
+
 \section{Критерії ідентифікації} % {{{1 _criteria_
 
 \subsection{Властивості і параметри критеріїв ідентифікації} % {{{2
