Add and reaarange p1, p3

--- a/p0/p0.tex
+++ b/p0/p0.tex
@@ -1,10 +1,9 @@
 \phantomsection
 \chapter*{Введение}
 
-\paragraph{Актуальность темы}
+\paragraph{Актуальність роботи}
 \pdfbookmark[1]{Актуальность темы}{actualitybookmark}
 
-\textbf{Актуальність роботи.}
 Нелінійні динамічні системи, розповсюджені в сучасних технологічних і
 природних процесах, незважаючи на детермінізм їх визначення, можуть проявляти
 хаотичні властивості в своїй динаміці. При цьому як завгодно малі збурення у вхідних
