Start to revice qontrol part

--- a/p4/qontrol.tex
+++ b/p4/qontrol.tex
@@ -1,4 +1,4 @@
-\chapter{Программно-аппаратный комплекс моделирования нелинейных динамических систем ``qontrol''}
+\chapter{Программная среда комплекс моделирования нелинейных динамических систем ``qontrol''}
 \label{chapter_qontrol}
 
 \section{Анализ существующих систем} %  % {{{1 ---------------------------------------------
@@ -62,15 +62,15 @@
 
 % }}}1
 
-\section{Требования к системе моделирования} %  % {{{1 ---------------------------------------------
-
-Созданный ?
+% \section{Требования к системе моделирования} %  % {{{1 ---------------------------------------------
+%
+% Созданный ?
 
 
 % }}}1
 
 
-\section{Основы построения программно-аппаратного комплекса} %  % {{{1 ------------------------------
+\section{Основы построения программной среды} %  % {{{1 ------------------------------
 
 Для разработки комплекса в качестве базового языка был выбран C++,
 как обеспечивающий совмещение гибкости и возможностей разработки
@@ -113,7 +113,51 @@
 Пользовательский интерфейс программы ``qontrol'' был создан с помощью
 средств, предоставляемых библиотекой Qt.
 
+\begin{figure}[htb!]
+  \begin{center}
+    \includegraphics[width=0.96\textwidth]{p/qontrol_all.png}
+  \end{center}
+  \caption{Общий вид интерфейса пользователя программы ``qontrol''}
+  \label{atu:f:qontrol_all}
+\end{figure}
 
+
+
+\begin{figure}[htb!]
+  \begin{center}
+    \includegraphics[width=0.7\textwidth]{p/qontrol_tqsearch.png}
+  \end{center}
+  \caption{Диалоговое окно с элементами интерфейса, автоматически созданными для объекта ``TQSearcher''}
+  \label{atu:f:qontrol_qsearch}
+\end{figure}
+
+
+
+\begin{figure}[htb!]
+  \begin{center}
+    \includegraphics[width=0.5\textwidth]{p/qontrol_link.png}
+  \end{center}
+  \caption{Диалоговое окно, которое позволяет задать параметры связи между объектами}
+  \label{atu:f:qontrol_link}
+\end{figure}
+
+
+\begin{figure}[htb!]
+  \begin{center}
+    \includegraphics[width=0.7\textwidth]{p/qontrol_task.png}
+  \end{center}
+  \caption{Диалоговое окно, предназначенное для задания параметров моделирования}
+  \label{atu:f:qontrol_simul}
+\end{figure}
+
+
+\begin{figure}[htb!]
+  \begin{center}
+    \includegraphics[width=0.7\textwidth]{p/qontrol_3d_a.png}
+  \end{center}
+  \caption{Окно,предназначенное для отображения графиков}
+  \label{atu:f:qontrol_3d}
+\end{figure}
 % }}}1
 
 \section{Основные подходы к } %  {{{1 --------------------------------------------- 
@@ -122,7 +166,60 @@
 
 \section{Выводы по разделу \thechapter} %  % {{{1 ---------------------------------------------
 
-Створено щось непогане.
+Создана программная среда ``qontrol'', предназначенная для моделирования
+нелинейных динамических систем, обладающая набором качеств,
+которые существенно упрощают процесс моделирования,
+создания новых систем идентификации и управления.
+К характеристикам программы следует отнести:
+
+\begin{itemize}
+
+  \item
+    Универсальность, позволяющая создавать модели сложных динамических систем,
+    с возможностью комбинирования и группировки элементов системы.
+
+  \item
+    Развитые средства обработки и представления данных.
+
+  \item
+    Удобный интерфейс пользователя.
+
+  \item
+    Высокая скорость моделирования.
+
+  \item
+    Возможность запускать программу в консольном режиме, без графического интерфейса
+    для проведения моделирования в пакетном режиме.
+
+  \item
+    Автоматическое построение интерфейса пользователя на основе
+    данных, представляемых моделируемым элементом.
+
+  \item
+    Возможность реализации сложных задач моделирования, которые не вписываются
+    в набор базовых действий, за счёт применения встроенного языка программирования,
+    основанного на JavaScript, и возможностью доступа к функциям программной среды.
+
+  \item
+    Широкие возможности по отображение информации в графическом виде.
+
+  \item
+    Возможность взаимодействия с другими программными и аппаратно-программными
+    комплексами.
+
+
+  \item
+    Открытый исходный код, что даёт возможность как применять элементы созданной
+    программы в своих разработках, так и дополнять программу своими элементами.
+
+
+  \item
+    Open-source лицензия и свободное распространение,
+    что позволяет без существенных затрат использовать программную среду
+    при проведении исследований и в учебном процессе.
+
+\end{itemize}
+
 
 % }}}1
 
